--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
       </p>
     </div>
     <div class="rss">
-      <a href="rss point">
-        <img src="" alt="Subscribe to RSS" />
+      <a href='atom.xml'>
+        <img src="images/red-rss.png" alt="Subscribe to RSS" />
       </a>
     </div>
   </div>
